GiRaFFE_NRPy: Fixed all LGTM issues.

--- a/in_progress/Tutorial-GiRaFFE_NRPy-A2B.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_NRPy-A2B.ipynb
@@ -381,55 +381,55 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "order_lowering_body = \"\"\"REAL AD0_1[5],AD0_2[5],AD1_2[5],AD1_0[5],AD2_0[5],AD2_1[5];\n",
-    "const double gammaDD00 = auxevol_gfs[IDX4S(GAMMADD00GF, i0,i1,i2)];\n",
-    "const double gammaDD01 = auxevol_gfs[IDX4S(GAMMADD01GF, i0,i1,i2)];\n",
-    "const double gammaDD02 = auxevol_gfs[IDX4S(GAMMADD02GF, i0,i1,i2)];\n",
-    "const double gammaDD11 = auxevol_gfs[IDX4S(GAMMADD11GF, i0,i1,i2)];\n",
-    "const double gammaDD12 = auxevol_gfs[IDX4S(GAMMADD12GF, i0,i1,i2)];\n",
-    "const double gammaDD22 = auxevol_gfs[IDX4S(GAMMADD22GF, i0,i1,i2)];\n",
-    "AD0_2[M2] = in_gfs[IDX4S(AD0GF, i0,i1,i2-2)];\n",
-    "AD0_2[M1] = in_gfs[IDX4S(AD0GF, i0,i1,i2-1)];\n",
-    "AD0_1[M2] = in_gfs[IDX4S(AD0GF, i0,i1-2,i2)];\n",
-    "AD0_1[M1] = in_gfs[IDX4S(AD0GF, i0,i1-1,i2)];\n",
-    "AD0_1[P0] = AD0_2[P0] = in_gfs[IDX4S(AD0GF, i0,i1,i2)];\n",
-    "AD0_1[P1] = in_gfs[IDX4S(AD0GF, i0,i1+1,i2)];\n",
-    "AD0_1[P2] = in_gfs[IDX4S(AD0GF, i0,i1+2,i2)];\n",
-    "AD0_2[P1] = in_gfs[IDX4S(AD0GF, i0,i1,i2+1)];\n",
-    "AD0_2[P2] = in_gfs[IDX4S(AD0GF, i0,i1,i2+2)];\n",
-    "AD1_2[M2] = in_gfs[IDX4S(AD1GF, i0,i1,i2-2)];\n",
-    "AD1_2[M1] = in_gfs[IDX4S(AD1GF, i0,i1,i2-1)];\n",
-    "AD1_0[M2] = in_gfs[IDX4S(AD1GF, i0-2,i1,i2)];\n",
-    "AD1_0[M1] = in_gfs[IDX4S(AD1GF, i0-1,i1,i2)];\n",
-    "AD1_2[P0] = AD1_0[P0] = in_gfs[IDX4S(AD1GF, i0,i1,i2)];\n",
-    "AD1_0[P1] = in_gfs[IDX4S(AD1GF, i0+1,i1,i2)];\n",
-    "AD1_0[P2] = in_gfs[IDX4S(AD1GF, i0+2,i1,i2)];\n",
-    "AD1_2[P1] = in_gfs[IDX4S(AD1GF, i0,i1,i2+1)];\n",
-    "AD1_2[P2] = in_gfs[IDX4S(AD1GF, i0,i1,i2+2)];\n",
-    "AD2_1[M2] = in_gfs[IDX4S(AD2GF, i0,i1-2,i2)];\n",
-    "AD2_1[M1] = in_gfs[IDX4S(AD2GF, i0,i1-1,i2)];\n",
-    "AD2_0[M2] = in_gfs[IDX4S(AD2GF, i0-2,i1,i2)];\n",
-    "AD2_0[M1] = in_gfs[IDX4S(AD2GF, i0-1,i1,i2)];\n",
-    "AD2_0[P0] = AD2_1[P0] = in_gfs[IDX4S(AD2GF, i0,i1,i2)];\n",
-    "AD2_0[P1] = in_gfs[IDX4S(AD2GF, i0+1,i1,i2)];\n",
-    "AD2_0[P2] = in_gfs[IDX4S(AD2GF, i0+2,i1,i2)];\n",
-    "AD2_1[P1] = in_gfs[IDX4S(AD2GF, i0,i1+1,i2)];\n",
-    "AD2_1[P2] = in_gfs[IDX4S(AD2GF, i0,i1+2,i2)];\n",
-    "const double invsqrtg = 1.0/sqrt(gammaDD00*gammaDD11*gammaDD22\n",
-    "                               - gammaDD00*gammaDD12*gammaDD12\n",
-    "                               + 2*gammaDD01*gammaDD02*gammaDD12\n",
-    "                               - gammaDD11*gammaDD02*gammaDD02\n",
-    "                               - gammaDD22*gammaDD01*gammaDD01);\n",
+    "# order_lowering_body = \"\"\"REAL AD0_1[5],AD0_2[5],AD1_2[5],AD1_0[5],AD2_0[5],AD2_1[5];\n",
+    "# const double gammaDD00 = auxevol_gfs[IDX4S(GAMMADD00GF, i0,i1,i2)];\n",
+    "# const double gammaDD01 = auxevol_gfs[IDX4S(GAMMADD01GF, i0,i1,i2)];\n",
+    "# const double gammaDD02 = auxevol_gfs[IDX4S(GAMMADD02GF, i0,i1,i2)];\n",
+    "# const double gammaDD11 = auxevol_gfs[IDX4S(GAMMADD11GF, i0,i1,i2)];\n",
+    "# const double gammaDD12 = auxevol_gfs[IDX4S(GAMMADD12GF, i0,i1,i2)];\n",
+    "# const double gammaDD22 = auxevol_gfs[IDX4S(GAMMADD22GF, i0,i1,i2)];\n",
+    "# AD0_2[M2] = in_gfs[IDX4S(AD0GF, i0,i1,i2-2)];\n",
+    "# AD0_2[M1] = in_gfs[IDX4S(AD0GF, i0,i1,i2-1)];\n",
+    "# AD0_1[M2] = in_gfs[IDX4S(AD0GF, i0,i1-2,i2)];\n",
+    "# AD0_1[M1] = in_gfs[IDX4S(AD0GF, i0,i1-1,i2)];\n",
+    "# AD0_1[P0] = AD0_2[P0] = in_gfs[IDX4S(AD0GF, i0,i1,i2)];\n",
+    "# AD0_1[P1] = in_gfs[IDX4S(AD0GF, i0,i1+1,i2)];\n",
+    "# AD0_1[P2] = in_gfs[IDX4S(AD0GF, i0,i1+2,i2)];\n",
+    "# AD0_2[P1] = in_gfs[IDX4S(AD0GF, i0,i1,i2+1)];\n",
+    "# AD0_2[P2] = in_gfs[IDX4S(AD0GF, i0,i1,i2+2)];\n",
+    "# AD1_2[M2] = in_gfs[IDX4S(AD1GF, i0,i1,i2-2)];\n",
+    "# AD1_2[M1] = in_gfs[IDX4S(AD1GF, i0,i1,i2-1)];\n",
+    "# AD1_0[M2] = in_gfs[IDX4S(AD1GF, i0-2,i1,i2)];\n",
+    "# AD1_0[M1] = in_gfs[IDX4S(AD1GF, i0-1,i1,i2)];\n",
+    "# AD1_2[P0] = AD1_0[P0] = in_gfs[IDX4S(AD1GF, i0,i1,i2)];\n",
+    "# AD1_0[P1] = in_gfs[IDX4S(AD1GF, i0+1,i1,i2)];\n",
+    "# AD1_0[P2] = in_gfs[IDX4S(AD1GF, i0+2,i1,i2)];\n",
+    "# AD1_2[P1] = in_gfs[IDX4S(AD1GF, i0,i1,i2+1)];\n",
+    "# AD1_2[P2] = in_gfs[IDX4S(AD1GF, i0,i1,i2+2)];\n",
+    "# AD2_1[M2] = in_gfs[IDX4S(AD2GF, i0,i1-2,i2)];\n",
+    "# AD2_1[M1] = in_gfs[IDX4S(AD2GF, i0,i1-1,i2)];\n",
+    "# AD2_0[M2] = in_gfs[IDX4S(AD2GF, i0-2,i1,i2)];\n",
+    "# AD2_0[M1] = in_gfs[IDX4S(AD2GF, i0-1,i1,i2)];\n",
+    "# AD2_0[P0] = AD2_1[P0] = in_gfs[IDX4S(AD2GF, i0,i1,i2)];\n",
+    "# AD2_0[P1] = in_gfs[IDX4S(AD2GF, i0+1,i1,i2)];\n",
+    "# AD2_0[P2] = in_gfs[IDX4S(AD2GF, i0+2,i1,i2)];\n",
+    "# AD2_1[P1] = in_gfs[IDX4S(AD2GF, i0,i1+1,i2)];\n",
+    "# AD2_1[P2] = in_gfs[IDX4S(AD2GF, i0,i1+2,i2)];\n",
+    "# const double invsqrtg = 1.0/sqrt(gammaDD00*gammaDD11*gammaDD22\n",
+    "#                                - gammaDD00*gammaDD12*gammaDD12\n",
+    "#                                + 2*gammaDD01*gammaDD02*gammaDD12\n",
+    "#                                - gammaDD11*gammaDD02*gammaDD02\n",
+    "#                                - gammaDD22*gammaDD01*gammaDD01);\n",
     "\n",
-    "REAL BU0[4],BU1[4],BU2[4];\n",
-    "compute_Bx_pointwise(BU0,invdx2,AD1_2,invdx1,AD2_1);\n",
-    "compute_Bx_pointwise(BU1,invdx0,AD2_0,invdx2,AD0_2);\n",
-    "compute_Bx_pointwise(BU2,invdx1,AD0_1,invdx0,AD1_0);\n",
+    "# REAL BU0[4],BU1[4],BU2[4];\n",
+    "# compute_Bx_pointwise(BU0,invdx2,AD1_2,invdx1,AD2_1);\n",
+    "# compute_Bx_pointwise(BU1,invdx0,AD2_0,invdx2,AD0_2);\n",
+    "# compute_Bx_pointwise(BU2,invdx1,AD0_1,invdx0,AD1_0);\n",
     "\n",
-    "auxevol_gfs[IDX4S(BU0GF, i0,i1,i2)] = find_accepted_Bx_order(BU0)*invsqrtg;\n",
-    "auxevol_gfs[IDX4S(BU1GF, i0,i1,i2)] = find_accepted_Bx_order(BU1)*invsqrtg;\n",
-    "auxevol_gfs[IDX4S(BU2GF, i0,i1,i2)] = find_accepted_Bx_order(BU2)*invsqrtg;\n",
-    "\"\"\""
+    "# auxevol_gfs[IDX4S(BU0GF, i0,i1,i2)] = find_accepted_Bx_order(BU0)*invsqrtg;\n",
+    "# auxevol_gfs[IDX4S(BU1GF, i0,i1,i2)] = find_accepted_Bx_order(BU1)*invsqrtg;\n",
+    "# auxevol_gfs[IDX4S(BU2GF, i0,i1,i2)] = find_accepted_Bx_order(BU2)*invsqrtg;\n",
+    "# \"\"\""
    ]
   },
   {
@@ -594,7 +594,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
