--- a/in_progress/Tutorial-GiRaFFE_NRPy_Main_Driver.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_NRPy_Main_Driver.ipynb
@@ -100,7 +100,7 @@
     "if nrpy_dir_path not in sys.path:\n",
     "    sys.path.append(nrpy_dir_path)\n",
     "\n",
-    "from outputC import *            # NRPy+: Core C code output module\n",
+    "from outputC import outCfunction, lhrh # NRPy+: Core C code output module\n",
     "import finite_difference as fin  # NRPy+: Finite difference C code generation module\n",
     "import NRPy_param_funcs as par   # NRPy+: Parameter interface\n",
     "import grid as gri               # NRPy+: Functions having to do with numerical grids\n",
@@ -174,8 +174,8 @@
     "psi6Phi = gri.register_gridfunctions(\"EVOL\",\"psi6Phi\")\n",
     "StildeD = ixp.register_gridfunctions_for_single_rank1(\"EVOL\",\"StildeD\")\n",
     "\n",
-    "PhievolParenU = ixp.register_gridfunctions_for_single_rank1(\"AUXEVOL\",\"PhievolParenU\",DIM=3)\n",
-    "AevolParen = gri.register_gridfunctions(\"AUXEVOL\",\"AevolParen\")\n",
+    "ixp.register_gridfunctions_for_single_rank1(\"AUXEVOL\",\"PhievolParenU\",DIM=3)\n",
+    "gri.register_gridfunctions(\"AUXEVOL\",\"AevolParen\")\n",
     "\n",
     "GRHD.compute_sqrtgammaDET(gammaDD)\n",
     "GRFFE.compute_AD_source_term_operand_for_FD(GRHD.sqrtgammaDET,betaU,alpha,psi6Phi,AD)\n",
@@ -940,7 +940,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
