--- a/in_progress/Tutorial-GiRaFFE_NRPy-Afield_flux_handwritten.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_NRPy-Afield_flux_handwritten.ipynb
@@ -248,7 +248,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from outputC import outCfunction, outputC # NRPy+: Core C code output module\n",
+    "from outputC import outputC # NRPy+: Core C code output module\n",
     "import sympy as sp               # SymPy: The Python computer algebra package upon which NRPy+ depends\n",
     "import indexedexp as ixp         # NRPy+: Symbolic indexed expression (e.g., tensors, vectors, etc.) support\n",
     "import GiRaFFE_NRPy.GiRaFFE_NRPy_Characteristic_Speeds as chsp\n",
@@ -799,7 +799,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
