--- a/in_progress/Tutorial-GiRaFFE_NRPy-Source_Terms.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_NRPy-Source_Terms.ipynb
@@ -84,10 +84,7 @@
    "outputs": [],
    "source": [
     "# Step 1: The StildeD RHS *source* term\n",
-    "from outputC import outputC, outCfunction, lhrh # NRPy+: Core C code output module\n",
-    "import finite_difference as fin  # NRPy+: Finite difference C code generation module\n",
-    "import NRPy_param_funcs as par   # NRPy+: Parameter interface\n",
-    "import grid as gri               # NRPy+: Functions having to do with numerical grids\n",
+    "from outputC import outputC, outCfunction # NRPy+: Core C code output module\n",
     "import indexedexp as ixp         # NRPy+: Symbolic indexed expression (e.g., tensors, vectors, etc.) support\n",
     "import GRHD.equations as GRHD    # NRPy+: Generate general relativistic hydrodynamics equations\n",
     "import GRFFE.equations as GRFFE  # NRPy+: Generate general relativistic force-free electrodynamics equations\n",
@@ -308,7 +305,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
