--- a/in_progress/Tutorial-GiRaFFE_NRPy_Main_Driver_staggered.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_NRPy_Main_Driver_staggered.ipynb
@@ -103,7 +103,7 @@
     "if nrpy_dir_path not in sys.path:\n",
     "    sys.path.append(nrpy_dir_path)\n",
     "\n",
-    "from outputC import *            # NRPy+: Core C code output module\n",
+    "from outputC import outCfunction, lhrh # NRPy+: Core C code output module\n",
     "import finite_difference as fin  # NRPy+: Finite difference C code generation module\n",
     "import NRPy_param_funcs as par   # NRPy+: Parameter interface\n",
     "import grid as gri               # NRPy+: Functions having to do with numerical grids\n",
@@ -1483,7 +1483,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
