--- a/in_progress/Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-Stilde_flux.ipynb
+++ b/in_progress/Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-Stilde_flux.ipynb
@@ -112,6 +112,9 @@
     "alpha_face,gammadet_face = gri.register_gridfunctions(\"AUXEVOL\",[\"alpha_face\",\"gammadet_face\"])\n",
     "gamma_faceDD = ixp.register_gridfunctions_for_single_rank2(\"AUXEVOL\",\"gamma_faceDD\",\"sym01\")\n",
     "beta_faceU = ixp.register_gridfunctions_for_single_rank1(\"AUXEVOL\",\"beta_faceU\")\n",
+    "phi_face = gri.register_gridfunctions(\"AUXEVOL\",\"phi_face\") # Needed only for ADM-BSSN-ADM workaround\n",
+    "gammaUUxx,gammaUUyy,gammaUUzz = gri.register_gridfunctions(\"AUXEVOL\",[\"gammaUUxx\",\"gammaUUyy\",\"gammaUUzz\"])\n",
+    "gamma_faceUUxx,gamma_faceUUyy,gamma_faceUUzz = gri.register_gridfunctions(\"AUXEVOL\",[\"gamma_faceUUxx\",\"gamma_faceUUyy\",\"gamma_faceUUzz\"])\n",
     "\n",
     "# We'll need some more gridfunctions, now, to represent the reconstructions of BU and ValenciavU\n",
     "# on the right and left faces\n",
@@ -149,8 +152,18 @@
     "# all points and set fewer parameters.\n",
     "subdir = \"RHSs\"\n",
     "cmd.mkdir(os.path.join(out_dir,subdir))\n",
+    "\n",
+    "gamma_faceUU = ixp.declarerank2(\"gamma_faceUU\",\"sym01\")\n",
+    "# gamma_faceUU,gamma_faceDET = ixp.symm_matrix_inverter3x3(gamma_faceDD)\n",
+    "# from outputC import outputC\n",
+    "# thing = outputC([gamma_faceUU[0][0],gamma_faceUU[0][1],gamma_faceUU[0][2],gamma_faceUU[1][1],gamma_faceUU[1][2],gamma_faceUU[2][2]],\n",
+    "#                 [\"gamma_faceUU00\",\"gamma_faceUU01\",\"gamma_faceUU02\",\"gamma_faceUU11\",\"gamma_faceUU12\",\"gamma_faceUU22\"],\n",
+    "#                 \"returnstring\")\n",
+    "# print(thing)\n",
+    "\n",
     "Sf.generate_C_code_for_Stilde_flux(os.path.join(out_dir,subdir),True, alpha_face, gamma_faceDD, beta_faceU,\n",
     "                                   Valenciav_rU, B_rU, Valenciav_lU, B_lU, sqrt4pi,\n",
+    "                                   gamma_faceUU=gamma_faceUU,phi_face=phi_face,\n",
     "                                   outCparams = \"outCverbose=False,CSE_sorting=none\",write_cmax_cmin=True)"
    ]
   },
@@ -308,7 +321,7 @@
     "\n",
     "// Let's also #define the NRPy+ gridfunctions\n",
     "#define ALPHA_FACEGF 0\n",
-    "#define GAMMADET_FACEGF 1\n",
+    "#define PHI_FACEGF 1\n",
     "#define GAMMA_FACEDD00GF 2\n",
     "#define GAMMA_FACEDD01GF 3\n",
     "#define GAMMA_FACEDD02GF 4\n",
@@ -336,7 +349,13 @@
     "#define CMIN_YGF 26\n",
     "#define CMAX_ZGF 27\n",
     "#define CMIN_ZGF 28\n",
-    "#define NUM_AUXEVOL_GFS 29\n",
+    "#define GAMMA_FACEUU00GF 29\n",
+    "#define GAMMA_FACEUU01GF 30\n",
+    "#define GAMMA_FACEUU02GF 31\n",
+    "#define GAMMA_FACEUU11GF 32\n",
+    "#define GAMMA_FACEUU12GF 33\n",
+    "#define GAMMA_FACEUU22GF 34\n",
+    "#define NUM_AUXEVOL_GFS 35\n",
     "\n",
     "#define STILDED0GF 0\n",
     "#define STILDED1GF 1\n",
@@ -401,7 +420,8 @@
     "    // Note that we use the CCTK-style flux_dirn indexing, and run from 1 to 3. This is for compatibility with\n",
     "    // the old code, since GiRaFFE_NRPy uses this integer for fewer things.\n",
     "    for(int flux_dirn = 1; flux_dirn <= 3; flux_dirn++) {\n",
-    "        for(int i0=0;i0<Nxx_plus_2NGHOSTS0;i0++) for(int i1=0;i1<Nxx_plus_2NGHOSTS1;i1++) for(int i2=0;i2<Nxx_plus_2NGHOSTS2;i2++) {\n",
+    "        for (int i2 = NGHOSTS; i2 < NGHOSTS+Nxx2+1; i2++) for (int i1 = NGHOSTS; i1 < NGHOSTS+Nxx1+1; i1++) for (int i0 = NGHOSTS; i0 < NGHOSTS+Nxx0+1; i0++) {\n",
+    "        // for(int i0=0;i0<Nxx_plus_2NGHOSTS0;i0++) for(int i1=0;i1<Nxx_plus_2NGHOSTS1;i1++) for(int i2=0;i2<Nxx_plus_2NGHOSTS2;i2++) {\n",
     "            // Now, it's time to make the random numbers.\n",
     "            //const long int seed = time(NULL); // seed = 1570632212; is an example of a seed that produces\n",
     "                                              // bad agreement for high speeds\n",
@@ -438,15 +458,13 @@
     "               const double tmp4 = pow(gammaDD02, 2);\n",
     "               const double tmp5 = gammaDD00*tmp0 - gammaDD00*tmp1 + 2*gammaDD01*tmp2 - gammaDD11*tmp4 - gammaDD22*tmp3;\n",
     "               const double tmp6 = 1.0/tmp5;\n",
-    "               auxevol_gfs[IDX4S(GAMMADET_FACEGF, i0, i1, i2)] = tmp5;\n",
     "\n",
-    "            auxevol_gfs[IDX4S(GAMMADET_FACEGF, i0,i1,i2)] = tmp5;\n",
-    "            METRIC_LAP_PSI4[PSI6] = sqrt(auxevol_gfs[IDX4S(GAMMADET_FACEGF, i0,i1,i2)]);\n",
+    "            METRIC_LAP_PSI4[PSI6] = sqrt(tmp5);\n",
     "            METRIC_LAP_PSI4[PSI2] = pow(METRIC_LAP_PSI4[PSI6],1.0/3.0);\n",
     "            METRIC_LAP_PSI4[PSI4] = METRIC_LAP_PSI4[PSI2]*METRIC_LAP_PSI4[PSI2];\n",
     "            const double Psim4 = 1.0/METRIC_LAP_PSI4[PSI4];\n",
     "            METRIC_LAP_PSI4[PSIM4] = Psim4;\n",
-    "\n",
+    "            auxevol_gfs[IDX4S(PHI_FACEGF, i0, i1, i2)] = 0.25 * log(METRIC_LAP_PSI4[PSI4]);\n",
     "            // Copied from the ETK implementation\n",
     "                CCTK_REAL gtxxL = gammaDD00*Psim4;\n",
     "                CCTK_REAL gtxyL = gammaDD01*Psim4;\n",
@@ -480,6 +498,15 @@
     "            FACEVAL[GUPXX] = ( gtyyL * gtzzL - gtyzL * gtyzL )/gtijdet;\n",
     "            FACEVAL[GUPYY] = ( gtxxL * gtzzL - gtxzL * gtxzL )/gtijdet;\n",
     "            FACEVAL[GUPZZ] = ( gtxxL * gtyyL - gtxyL * gtxyL )/gtijdet;\n",
+    "           auxevol_gfs[IDX4S(GAMMA_FACEUU00GF, i0,i1,i2)] = tmp6*(gammaDD11*gammaDD22 - ((gammaDD12)*(gammaDD12)));\n",
+    "           auxevol_gfs[IDX4S(GAMMA_FACEUU01GF, i0,i1,i2)] = tmp6*(-gammaDD01*gammaDD22 + gammaDD02*gammaDD12);\n",
+    "           auxevol_gfs[IDX4S(GAMMA_FACEUU02GF, i0,i1,i2)] = tmp6*(gammaDD01*gammaDD12 - gammaDD02*gammaDD11);\n",
+    "           auxevol_gfs[IDX4S(GAMMA_FACEUU11GF, i0,i1,i2)] = tmp6*(gammaDD00*gammaDD22 - ((gammaDD02)*(gammaDD02)));\n",
+    "           auxevol_gfs[IDX4S(GAMMA_FACEUU12GF, i0,i1,i2)] = tmp6*(-gammaDD00*gammaDD12 + gammaDD01*gammaDD02);\n",
+    "           auxevol_gfs[IDX4S(GAMMA_FACEUU22GF, i0,i1,i2)] = tmp6*(gammaDD00*gammaDD11 - ((gammaDD01)*(gammaDD01)));\n",
+    "            /*auxevol_gfs[IDX4S(GAMMA_FACEUU00GF, i0,i1,i2)] = FACEVAL[GUPXX];\n",
+    "            auxevol_gfs[IDX4S(GAMMA_FACEUU11GF, i0,i1,i2)] = FACEVAL[GUPYY];\n",
+    "            auxevol_gfs[IDX4S(GAMMA_FACEUU22GF, i0,i1,i2)] = FACEVAL[GUPZZ];*/\n",
     "\n",
     "            auxevol_gfs[IDX4S(BETA_FACEU0GF, i0,i1,i2)] = (double)rand()/RAND_MAX*0.2-0.1;\n",
     "            const double betax = auxevol_gfs[IDX4S(BETA_FACEU0GF, i0,i1,i2)];\n",
@@ -599,11 +626,11 @@
      "output_type": "stream",
      "text": [
       "Compiling executable...\n",
-      "(EXEC): Executing `gcc -Ofast -fopenmp -march=native -funroll-loops Validation\\Stilde_flux_unit_test.C -o Validation\\Stilde_flux_unit_test.exe -lm`...\n",
-      "(BENCH): Finished executing in 7.21141242980957 seconds.\n",
+      "(EXEC): Executing `gcc -Ofast -fopenmp -march=native -funroll-loops Validation/Stilde_flux_unit_test.C -o Validation/Stilde_flux_unit_test -lm`...\n",
+      "(BENCH): Finished executing in 1.0116627216339111 seconds.\n",
       "Finished compilation.\n",
-      "(EXEC): Executing `cmd /c Validation\\Stilde_flux_unit_test `...\n",
-      "(BENCH): Finished executing in 0.3580203056335449 seconds.\n"
+      "(EXEC): Executing `taskset -c 0,1,2,3 ./Validation/Stilde_flux_unit_test `...\n",
+      "(BENCH): Finished executing in 0.20888686180114746 seconds.\n"
      ]
     }
    ],
@@ -646,9 +673,9 @@
      "output_type": "stream",
      "text": [
       "Now comparing the significant digits of agreements in each direction...\n",
-      "SDA in Stilde_rhsD0 = 16.0\n",
-      "SDA in Stilde_rhsD1 = 15.8\n",
-      "SDA in Stilde_rhsD2 = 15.7\n"
+      "SDA in Stilde_rhsD0 = 15.6\n",
+      "SDA in Stilde_rhsD1 = 15.6\n",
+      "SDA in Stilde_rhsD2 = 15.9\n"
      ]
     }
    ],
@@ -685,9 +712,55 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "pdflatex: security risk: running with elevated privileges\n",
-      "pdflatex: security risk: running with elevated privileges\n",
-      "pdflatex: security risk: running with elevated privileges\n",
+      "[NbConvertApp] ERROR | Error while converting 'Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-Stilde_flux.ipynb'\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/penelson/nrpyvirtualenv/lib/python3.8/site-packages/nbconvert/nbconvertapp.py\", line 418, in export_single_notebook\n",
+      "    output, resources = self.exporter.from_filename(notebook_filename, resources=resources)\n",
+      "  File \"/home/penelson/nrpyvirtualenv/lib/python3.8/site-packages/nbconvert/exporters/exporter.py\", line 181, in from_filename\n",
+      "    return self.from_file(f, resources=resources, **kw)\n",
+      "  File \"/home/penelson/nrpyvirtualenv/lib/python3.8/site-packages/nbconvert/exporters/exporter.py\", line 199, in from_file\n",
+      "    return self.from_notebook_node(nbformat.read(file_stream, as_version=4), resources=resources, **kw)\n",
+      "  File \"/home/penelson/nrpyvirtualenv/lib/python3.8/site-packages/nbconvert/exporters/latex.py\", line 77, in from_notebook_node\n",
+      "    return super().from_notebook_node(nb, resources, **kw)\n",
+      "  File \"/home/penelson/nrpyvirtualenv/lib/python3.8/site-packages/nbconvert/exporters/templateexporter.py\", line 384, in from_notebook_node\n",
+      "    output = self.template.render(nb=nb_copy, resources=resources)\n",
+      "  File \"/home/penelson/nrpyvirtualenv/lib/python3.8/site-packages/jinja2/environment.py\", line 1090, in render\n",
+      "    self.environment.handle_exception()\n",
+      "  File \"/home/penelson/nrpyvirtualenv/lib/python3.8/site-packages/jinja2/environment.py\", line 832, in handle_exception\n",
+      "    reraise(*rewrite_traceback_stack(source=source))\n",
+      "  File \"/home/penelson/nrpyvirtualenv/lib/python3.8/site-packages/jinja2/_compat.py\", line 28, in reraise\n",
+      "    raise value.with_traceback(tb)\n",
+      "  File \"/home/penelson/nrpyvirtualenv/share/jupyter/nbconvert/templates/latex/index.tex.j2\", line 8, in top-level template code\n",
+      "    ((* extends cell_style *))\n",
+      "  File \"/home/penelson/nrpyvirtualenv/share/jupyter/nbconvert/templates/latex/style_jupyter.tex.j2\", line 176, in top-level template code\n",
+      "    \\prompt{(((prompt)))}{(((prompt_color)))}{(((execution_count)))}{(((extra_space)))}\n",
+      "  File \"/home/penelson/nrpyvirtualenv/share/jupyter/nbconvert/templates/latex/base.tex.j2\", line 7, in top-level template code\n",
+      "    ((*- extends 'document_contents.tex.j2' -*))\n",
+      "  File \"/home/penelson/nrpyvirtualenv/share/jupyter/nbconvert/templates/latex/document_contents.tex.j2\", line 51, in top-level template code\n",
+      "    ((*- block figure scoped -*))\n",
+      "  File \"/home/penelson/nrpyvirtualenv/share/jupyter/nbconvert/templates/latex/display_priority.j2\", line 5, in top-level template code\n",
+      "    ((*- extends 'null.j2' -*))\n",
+      "  File \"/home/penelson/nrpyvirtualenv/share/jupyter/nbconvert/templates/latex/null.j2\", line 30, in top-level template code\n",
+      "    ((*- block body -*))\n",
+      "  File \"/home/penelson/nrpyvirtualenv/share/jupyter/nbconvert/templates/latex/base.tex.j2\", line 206, in block \"body\"\n",
+      "    ((( super() )))\n",
+      "  File \"/home/penelson/nrpyvirtualenv/share/jupyter/nbconvert/templates/latex/null.j2\", line 32, in block \"body\"\n",
+      "    ((*- block any_cell scoped -*))\n",
+      "  File \"/home/penelson/nrpyvirtualenv/share/jupyter/nbconvert/templates/latex/null.j2\", line 85, in block \"any_cell\"\n",
+      "    ((*- block markdowncell scoped-*)) ((*- endblock markdowncell -*))\n",
+      "  File \"/home/penelson/nrpyvirtualenv/share/jupyter/nbconvert/templates/latex/document_contents.tex.j2\", line 68, in block \"markdowncell\"\n",
+      "    ((( cell.source | citation2latex | strip_files_prefix | convert_pandoc('markdown+tex_math_double_backslash', 'json',extra_args=[]) | resolve_references | convert_pandoc('json','latex'))))\n",
+      "  File \"/home/penelson/nrpyvirtualenv/lib/python3.8/site-packages/nbconvert/filters/pandoc.py\", line 24, in convert_pandoc\n",
+      "    return pandoc(source, from_format, to_format, extra_args=extra_args)\n",
+      "  File \"/home/penelson/nrpyvirtualenv/lib/python3.8/site-packages/nbconvert/utils/pandoc.py\", line 52, in pandoc\n",
+      "    check_pandoc_version()\n",
+      "  File \"/home/penelson/nrpyvirtualenv/lib/python3.8/site-packages/nbconvert/utils/pandoc.py\", line 100, in check_pandoc_version\n",
+      "    v = get_pandoc_version()\n",
+      "  File \"/home/penelson/nrpyvirtualenv/lib/python3.8/site-packages/nbconvert/utils/pandoc.py\", line 77, in get_pandoc_version\n",
+      "    raise PandocMissing()\n",
+      "nbconvert.utils.pandoc.PandocMissing: Pandoc wasn't found.\n",
+      "Please check that pandoc is installed:\n",
+      "https://pandoc.org/installing.html\n",
       "Created Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-Stilde_flux.tex, and\n",
       "    compiled LaTeX file to PDF file Tutorial-Start_to_Finish_UnitTest-\n",
       "    GiRaFFE_NRPy-Stilde_flux.pdf\n"
@@ -716,7 +789,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
