GiRaFFE_NRPy/Stilde_flux: Updated the algorithm to fix the OpenMP bug with multiple cores and made sure the 1D unit test is ready to go.

--- a/in_progress/Tutorial-GiRaFFE_NRPy_Main_Driver_staggered.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_NRPy_Main_Driver_staggered.ipynb
@@ -829,6 +829,7 @@
     "  // This function is housed in the file: \"add_fluxes_and_source_terms_to_hydro_rhss.C\"\n",
     "  calculate_StildeD0_source_term(params,auxevol_gfs,rhs_gfs);\n",
     "  calculate_Stilde_flux_D0(params,auxevol_gfs,rhs_gfs);\n",
+    "  calculate_Stilde_rhsD(flux_dirn+1,params,auxevol_gfs,rhs_gfs);\n",
     "\n",
     "  // Note that we have already reconstructed vx and vy along the x-direction,\n",
     "  //   at (i-1/2,j,k). That result is stored in v{x,y}{r,l}.  Bx_stagger data\n",
@@ -941,6 +942,7 @@
     "  // This function is housed in the file: \"add_fluxes_and_source_terms_to_hydro_rhss.C\"\n",
     "  calculate_StildeD1_source_term(params,auxevol_gfs,rhs_gfs);\n",
     "  calculate_Stilde_flux_D1(params,auxevol_gfs,rhs_gfs);\n",
+    "  calculate_Stilde_rhsD(flux_dirn+1,params,auxevol_gfs,rhs_gfs);\n",
     "\n",
     "  /*****************************************\n",
     "   * COMPUTING RHS OF A_z, BOOKKEEPING NOTE:\n",
@@ -1095,6 +1097,7 @@
     "  // This function is housed in the file: \"add_fluxes_and_source_terms_to_hydro_rhss.C\"\n",
     "  calculate_StildeD2_source_term(params,auxevol_gfs,rhs_gfs);\n",
     "  calculate_Stilde_flux_D2(params,auxevol_gfs,rhs_gfs);\n",
+    "  calculate_Stilde_rhsD(flux_dirn+1,params,auxevol_gfs,rhs_gfs);\n",
     "\n",
     "  // in_prims[{VYR,VYL,VZR,VZL}].gz_{lo,hi} ghostzones are not set correcty.\n",
     "  //    We fix this below.\n",
