--- a/in_progress/Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-Stilde_flux.ipynb
+++ b/in_progress/Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-Stilde_flux.ipynb
@@ -111,10 +111,9 @@
     "# to declare them as C parameters in NRPy+. We will denote this with the _face infix/suffix.\n",
     "alpha_face,gammadet_face = gri.register_gridfunctions(\"AUXEVOL\",[\"alpha_face\",\"gammadet_face\"])\n",
     "gamma_faceDD = ixp.register_gridfunctions_for_single_rank2(\"AUXEVOL\",\"gamma_faceDD\",\"sym01\")\n",
+    "gamma_faceUU = ixp.register_gridfunctions_for_single_rank2(\"AUXEVOL\",\"gamma_faceUU\",\"sym01\")\n",
     "beta_faceU = ixp.register_gridfunctions_for_single_rank1(\"AUXEVOL\",\"beta_faceU\")\n",
     "phi_face = gri.register_gridfunctions(\"AUXEVOL\",\"phi_face\") # Needed only for ADM-BSSN-ADM workaround\n",
-    "gammaUUxx,gammaUUyy,gammaUUzz = gri.register_gridfunctions(\"AUXEVOL\",[\"gammaUUxx\",\"gammaUUyy\",\"gammaUUzz\"])\n",
-    "gamma_faceUUxx,gamma_faceUUyy,gamma_faceUUzz = gri.register_gridfunctions(\"AUXEVOL\",[\"gamma_faceUUxx\",\"gamma_faceUUyy\",\"gamma_faceUUzz\"])\n",
     "\n",
     "# We'll need some more gridfunctions, now, to represent the reconstructions of BU and ValenciavU\n",
     "# on the right and left faces\n",
@@ -122,6 +121,15 @@
     "B_rU = ixp.register_gridfunctions_for_single_rank1(\"AUXEVOL\",\"B_rU\",DIM=3)\n",
     "Valenciav_lU = ixp.register_gridfunctions_for_single_rank1(\"AUXEVOL\",\"Valenciav_lU\",DIM=3)\n",
     "B_lU = ixp.register_gridfunctions_for_single_rank1(\"AUXEVOL\",\"B_lU\",DIM=3)\n",
+    "\n",
+    "Stilde_flux_HLLED = ixp.register_gridfunctions_for_single_rank1(\"AUXEVOL\",\"Stilde_flux_HLLED\")\n",
+    "\n",
+    "gri.register_gridfunctions(\"AUXEVOL\",\"cmax_x\")\n",
+    "gri.register_gridfunctions(\"AUXEVOL\",\"cmin_x\")\n",
+    "gri.register_gridfunctions(\"AUXEVOL\",\"cmax_y\")\n",
+    "gri.register_gridfunctions(\"AUXEVOL\",\"cmin_y\")\n",
+    "gri.register_gridfunctions(\"AUXEVOL\",\"cmax_z\")\n",
+    "gri.register_gridfunctions(\"AUXEVOL\",\"cmin_z\")\n",
     "\n",
     "sqrt4pi = par.Cparameters(\"REAL\",thismodule,\"sqrt4pi\",\"sqrt(4.0*M_PI)\")\n",
     "\n",
@@ -145,7 +153,15 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Output C function calculate_Stilde_rhsD() to file Validation/RHSs/calculate_Stilde_rhsD.h\n"
+     ]
+    }
+   ],
    "source": [
     "# And now, we'll write the files\n",
     "# In practice, the C functions should only loop over the interior; here, however, we can loop over\n",
@@ -153,16 +169,9 @@
     "subdir = \"RHSs\"\n",
     "cmd.mkdir(os.path.join(out_dir,subdir))\n",
     "\n",
-    "gamma_faceUU = ixp.declarerank2(\"gamma_faceUU\",\"sym01\")\n",
-    "# gamma_faceUU,gamma_faceDET = ixp.symm_matrix_inverter3x3(gamma_faceDD)\n",
-    "# from outputC import outputC\n",
-    "# thing = outputC([gamma_faceUU[0][0],gamma_faceUU[0][1],gamma_faceUU[0][2],gamma_faceUU[1][1],gamma_faceUU[1][2],gamma_faceUU[2][2]],\n",
-    "#                 [\"gamma_faceUU00\",\"gamma_faceUU01\",\"gamma_faceUU02\",\"gamma_faceUU11\",\"gamma_faceUU12\",\"gamma_faceUU22\"],\n",
-    "#                 \"returnstring\")\n",
-    "# print(thing)\n",
-    "\n",
     "Sf.generate_C_code_for_Stilde_flux(os.path.join(out_dir,subdir),True, alpha_face, gamma_faceDD, beta_faceU,\n",
-    "                                   Valenciav_rU, B_rU, Valenciav_lU, B_lU, sqrt4pi,\n",
+    "                                   Valenciav_rU, B_rU, Valenciav_lU, B_lU,\n",
+    "                                   Stilde_flux_HLLED, sqrt4pi,\n",
     "                                   gamma_faceUU=gamma_faceUU,phi_face=phi_face,\n",
     "                                   outCparams = \"outCverbose=False,CSE_sorting=none\",write_cmax_cmin=True)"
    ]
@@ -315,6 +324,8 @@
     "// Standard NRPy+ memory access:\n",
     "#define IDX4S(g,i,j,k) \\\n",
     "( (i) + Nxx_plus_2NGHOSTS0 * ( (j) + Nxx_plus_2NGHOSTS1 * ( (k) + Nxx_plus_2NGHOSTS2 * (g) ) ) )\n",
+    "#define IDX4ptS(g,idx) ( (idx) + (Nxx_plus_2NGHOSTS0*Nxx_plus_2NGHOSTS1*Nxx_plus_2NGHOSTS2) * (g) )\n",
+    "#define IDX3S(i,j,k) ( (i) + Nxx_plus_2NGHOSTS0 * ( (j) + Nxx_plus_2NGHOSTS1 * ( (k) ) ) )\n",
     "\n",
     "// Standard CCTK memory access:\n",
     "#define CCTK_GFINDEX3D(thing,i,j,k) ( (i) + Nxx_plus_2NGHOSTS0 * ( (j) + Nxx_plus_2NGHOSTS1 * (k) ) )\n",
@@ -355,7 +366,10 @@
     "#define GAMMA_FACEUU11GF 32\n",
     "#define GAMMA_FACEUU12GF 33\n",
     "#define GAMMA_FACEUU22GF 34\n",
-    "#define NUM_AUXEVOL_GFS 35\n",
+    "#define STILDE_FLUX_HLLED0GF 35\n",
+    "#define STILDE_FLUX_HLLED1GF 36\n",
+    "#define STILDE_FLUX_HLLED2GF 37\n",
+    "#define NUM_AUXEVOL_GFS 38\n",
     "\n",
     "#define STILDED0GF 0\n",
     "#define STILDED1GF 1\n",
@@ -381,6 +395,9 @@
     "#include \"GiRaFFE_headers.h\"\n",
     "#include \"inlined_functions.C\"\n",
     "#include \"GRFFE__S_i__flux.C\"\n",
+    "\n",
+    "// Include this one later because it requries kronecker_delta from GiRaFFE_headers.h\n",
+    "#include \"RHSs/calculate_Stilde_rhsD.h\"\n",
     "\n",
     "int main() {\n",
     "    paramstruct params;\n",
@@ -576,6 +593,7 @@
     "        if(flux_dirn==1) calculate_Stilde_flux_D0(&params,auxevol_gfs,rhs_gfs);\n",
     "        if(flux_dirn==2) calculate_Stilde_flux_D1(&params,auxevol_gfs,rhs_gfs);\n",
     "        if(flux_dirn==3) calculate_Stilde_flux_D2(&params,auxevol_gfs,rhs_gfs);\n",
+    "        calculate_Stilde_rhsD(flux_dirn,&params,auxevol_gfs,rhs_gfs);\n",
     "\n",
     "        for(int i0=0;i0<Nxx_plus_2NGHOSTS0-1;i0++) for(int i1=0;i1<Nxx_plus_2NGHOSTS1-1;i1++) for(int i2=0;i2<Nxx_plus_2NGHOSTS2-1;i2++) {\n",
     "            const int index = CCTK_GFINDEX3D(cctkGH,i0,i1,i2);\n",
@@ -627,10 +645,10 @@
      "text": [
       "Compiling executable...\n",
       "(EXEC): Executing `gcc -Ofast -fopenmp -march=native -funroll-loops Validation/Stilde_flux_unit_test.C -o Validation/Stilde_flux_unit_test -lm`...\n",
-      "(BENCH): Finished executing in 1.0116627216339111 seconds.\n",
+      "(BENCH): Finished executing in 1.011216402053833 seconds.\n",
       "Finished compilation.\n",
       "(EXEC): Executing `taskset -c 0,1,2,3 ./Validation/Stilde_flux_unit_test `...\n",
-      "(BENCH): Finished executing in 0.20888686180114746 seconds.\n"
+      "(BENCH): Finished executing in 0.20940327644348145 seconds.\n"
      ]
     }
    ],
@@ -673,8 +691,8 @@
      "output_type": "stream",
      "text": [
       "Now comparing the significant digits of agreements in each direction...\n",
-      "SDA in Stilde_rhsD0 = 15.6\n",
-      "SDA in Stilde_rhsD1 = 15.6\n",
+      "SDA in Stilde_rhsD0 = 15.8\n",
+      "SDA in Stilde_rhsD1 = 15.5\n",
       "SDA in Stilde_rhsD2 = 15.9\n"
      ]
     }
