--- a/in_progress/Tutorial-GiRaFFE_NRPy-Stilde-flux.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_NRPy-Stilde-flux.ipynb
@@ -293,62 +293,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def write_C_Code_to_read_memory(write_cmax_cmin=False):\n",
-    "    Memory_Read = \"\"\n",
-    "    # Read in all the inputs:\n",
-    "    for var in [\"GAMMA_FACEDD00\", \"GAMMA_FACEDD01\", \"GAMMA_FACEDD02\",\n",
-    "                \"GAMMA_FACEDD11\", \"GAMMA_FACEDD12\", \"GAMMA_FACEDD22\",\n",
-    "                \"BETA_FACEU0\", \"BETA_FACEU1\", \"BETA_FACEU2\",\"ALPHA_FACE\",\n",
-    "                \"B_RU0\",\"B_RU1\",\"B_RU2\",\"B_LU0\",\"B_LU1\",\"B_LU2\",\n",
-    "                \"VALENCIAV_RU0\",\"VALENCIAV_RU1\",\"VALENCIAV_RU2\",\n",
-    "                \"VALENCIAV_LU0\",\"VALENCIAV_LU1\",\"VALENCIAV_LU2\"]:\n",
-    "        lhsvar = var.lower().replace(\"dd\",\"DD\").replace(\"u\",\"U\").replace(\"b_\",\"B_\").replace(\"valencia\",\"Valencia\")\n",
-    "        # e.g.,\n",
-    "        # const REAL gammaDD00dD0 = auxevol_gfs[IDX4S(GAMMA_FACEDD00GF,i0,i1,i2)];\n",
-    "        Memory_Read += \"const REAL \"+lhsvar+\" = auxevol_gfs[IDX4S(\"+var+\"GF,i0,i1,i2)];\\n\"\n",
-    "    # Storage for the outputs:\n",
-    "    for var in [\"Stilde_fluxD0\",\"Stilde_fluxD1\",\"Stilde_fluxD2\"]:\n",
-    "        # e.g.,\n",
-    "        # REAL Stilde_fluxD0 = 0;\n",
-    "        Memory_Read += \"REAL \"+var+\" = 0;\\n\"\n",
-    "    if write_cmax_cmin:\n",
-    "        # In the staggered case, we will also want to output cmax and cmin:\n",
-    "        for var in [\"cmax\",\"cmin\"]:\n",
-    "            Memory_Read += \"REAL \"+var+\" = 0;\\n\"\n",
-    "    return Memory_Read\n",
-    "\n",
-    "# This quick function returns a nearby point for memory access. We need this because derivatives are not local operations.\n",
-    "def idxm1(dirn):\n",
-    "    if dirn==0:\n",
-    "        return \"i0-1, i1, i2\"\n",
-    "    if dirn==1:\n",
-    "        return \"i0, i1-1, i2\"\n",
-    "    if dirn==2:\n",
-    "        return \"i0, i1, i2-1\"\n",
-    "\n",
-    "def write_C_code_to_write_results(write_cmax_cmin=False):\n",
-    "    # Write the outputs:\n",
-    "    Memory_Write = []\n",
-    "    for dirn in range(3):\n",
-    "        for comp in range(3):\n",
-    "            Memory_Write.append(\"\")\n",
-    "            # e.g.,\n",
-    "            # rhs_gfs[IDX4S(STILDED0GF, i0, i1, i2)] += invdx0*Stilde_fluxD0;\n",
-    "            # (Note that the invdx0 gets substituted separately! It shouldn't necessarily match Stilde!)\n",
-    "            Memory_Write[dirn] += \"rhs_gfs[IDX4S(STILDED\"+str(comp)+\"GF, i0, i1, i2)] += invdx\"+str(dirn)+\"*Stilde_fluxD\"+str(comp)+\";\\n\"\n",
-    "            # e.g.,\n",
-    "            # rhs_gfs[IDX4S(STILDED0GF, i0-1, i1, i2)] -= invdx0*Stilde_fluxD0;\n",
-    "            Memory_Write[dirn] += \"rhs_gfs[IDX4S(STILDED\"+str(comp)+\"GF, \"+idxm1(dirn)+\")] -= invdx\"+str(dirn)+\"*Stilde_fluxD\"+str(comp)+\";\\n\"\n",
-    "    if write_cmax_cmin:\n",
-    "        name_suffixes = [\"_X\",\"_Y\",\"_Z\"]\n",
-    "        for dirn in range(3):\n",
-    "            for var in [\"cmax\",\"cmin\"]:\n",
-    "                Memory_Write[dirn] += \"auxevol_gfs[IDX4S(\"+var.upper()+name_suffixes[dirn]+\"GF, i0, i1, i2)] = \"+var+\";\\n\"\n",
-    "    return Memory_Write\n",
-    "\n",
     "def generate_C_code_for_Stilde_flux(out_dir,inputs_provided = False, alpha_face=None, gamma_faceDD=None, beta_faceU=None,\n",
-    "                                    Valenciav_rU=None, B_rU=None, Valenciav_lU=None, B_lU=None, sqrt4pi=None,\n",
-    "                                    outCparams = \"outCverbose=False,CSE_sorting=none\", write_cmax_cmin=False):\n",
+    "                                    Valenciav_rU=None, B_rU=None, Valenciav_lU=None, B_lU=None,\n",
+    "                                    Stilde_flux_HLLED = None, sqrt4pi=None,\n",
+    "                                    outCparams = \"outCverbose=False,CSE_sorting=none\", write_cmax_cmin=False, gamma_faceUU=None,phi_face=None):\n",
     "    if not inputs_provided:\n",
     "        # We will pass values of the gridfunction on the cell faces into the function. This requires us\n",
     "        # to declare them as C parameters in NRPy+. We will denote this with the _face infix/suffix.\n",
@@ -364,46 +312,73 @@
     "        B_lU = ixp.register_gridfunctions_for_single_rank1(\"AUXEVOL\",\"B_lU\",DIM=3)\n",
     "        sqrt4pi = par.Cparameters(\"REAL\",thismodule,\"sqrt4pi\",\"sqrt(4.0*M_PI)\")\n",
     "\n",
-    "    Memory_Read = write_C_Code_to_read_memory()\n",
-    "    Memory_Write = write_C_code_to_write_results()\n",
+    "        # We'll also need to store the results of the HLLE step between functions.\n",
+    "        Stilde_flux_HLLED = ixp.register_gridfunctions_for_single_rank1(\"AUXEVOL\",\"Stilde_flux_HLLED\")\n",
+    "\n",
     "    if write_cmax_cmin:\n",
     "        # In the staggered case, we will also want to output cmax and cmin\n",
     "        # If we want to write cmax and cmin, we will need to be able to change auxevol_gfs:\n",
     "        input_params_for_Stilde_flux = \"const paramstruct *params,REAL *auxevol_gfs,REAL *rhs_gfs\"\n",
     "    else:\n",
     "        input_params_for_Stilde_flux = \"const paramstruct *params,const REAL *auxevol_gfs,REAL *rhs_gfs\"\n",
+    "    if gamma_faceUU is None:\n",
+    "        gamma_faceUU,unusedgammaDET = ixp.generic_matrix_inverter3x3(gamma_faceDD)\n",
+    "\n",
+    "    if write_cmax_cmin:\n",
+    "        name_suffixes = [\"_x\",\"_y\",\"_z\"]\n",
     "\n",
     "    for flux_dirn in range(3):\n",
-    "        calculate_Stilde_flux(flux_dirn,alpha_face,gamma_faceDD,beta_faceU,\n",
-    "                              Valenciav_rU,B_rU,Valenciav_lU,B_lU,sqrt4pi)\n",
+    "        calculate_Stilde_flux(flux_dirn,alpha_face,gamma_faceDD,beta_faceU,\\\n",
+    "                              Valenciav_rU,B_rU,Valenciav_lU,B_lU,sqrt4pi,gamma_faceUU,phi_face)\n",
+    "\n",
     "        Stilde_flux_to_print = [\n",
-    "                                Stilde_fluxD[0],\n",
-    "                                Stilde_fluxD[1],\n",
-    "                                Stilde_fluxD[2]\n",
+    "                                lhrh(lhs=gri.gfaccess(\"out_gfs\",\"Stilde_flux_HLLED0\"),rhs=Stilde_fluxD[0]),\n",
+    "                                lhrh(lhs=gri.gfaccess(\"out_gfs\",\"Stilde_flux_HLLED1\"),rhs=Stilde_fluxD[1]),\n",
+    "                                lhrh(lhs=gri.gfaccess(\"out_gfs\",\"Stilde_flux_HLLED2\"),rhs=Stilde_fluxD[2]),\n",
     "                               ]\n",
-    "        Stilde_flux_names = [\n",
-    "                             \"Stilde_fluxD0\",\n",
-    "                             \"Stilde_fluxD1\",\n",
-    "                             \"Stilde_fluxD2\"\n",
-    "                            ]\n",
     "\n",
     "        if write_cmax_cmin:\n",
-    "            Stilde_flux_to_print = Stilde_flux_to_print + [chsp.cmax,chsp.cmin]\n",
-    "            Stilde_flux_names = Stilde_flux_names + [\"cmax\",\"cmin\"]\n",
+    "            Stilde_flux_to_print = Stilde_flux_to_print \\\n",
+    "                                  +[\n",
+    "                                    lhrh(lhs=gri.gfaccess(\"out_gfs\",\"cmax\"+name_suffixes[flux_dirn]),rhs=chsp.cmax),\n",
+    "                                    lhrh(lhs=gri.gfaccess(\"out_gfs\",\"cmin\"+name_suffixes[flux_dirn]),rhs=chsp.cmin),\n",
+    "                                   ]\n",
     "\n",
-    "        desc = \"Compute the flux term of all 3 components of tilde{S}_i on the right face in the \" + str(flux_dirn) + \"direction.\"\n",
+    "        desc = \"Compute the flux term of all 3 components of tilde{S}_i on the left face in the \" + str(flux_dirn) + \"direction for all components.\"\n",
     "        name = \"calculate_Stilde_flux_D\" + str(flux_dirn)\n",
     "        Ccode_function = outCfunction(\n",
     "            outfile  = \"returnstring\", desc=desc, name=name,\n",
     "            params   = input_params_for_Stilde_flux,\n",
-    "            body     =  Memory_Read \\\n",
-    "                       +outputC(Stilde_flux_to_print,Stilde_flux_names,\"returnstring\",params=outCparams).replace(\"IDX4\",\"IDX4S\")\\\n",
-    "                       +Memory_Write[flux_dirn],\n",
+    "            body     = fin.FD_outputC(\"returnstring\",Stilde_flux_to_print,params=outCparams).replace(\"IDX4\",\"IDX4S\"),\n",
     "            loopopts =\"InteriorPoints\",\n",
     "            rel_path_for_Cparams=os.path.join(\"../\")).replace(\"NGHOSTS+Nxx0\",\"NGHOSTS+Nxx0+1\").replace(\"NGHOSTS+Nxx1\",\"NGHOSTS+Nxx1+1\").replace(\"NGHOSTS+Nxx2\",\"NGHOSTS+Nxx2+1\")\n",
     "\n",
     "        with open(os.path.join(out_dir,name+\".h\"),\"w\") as file:\n",
-    "            file.write(Ccode_function)"
+    "            file.write(Ccode_function)\n",
+    "\n",
+    "    pre_body = \"\"\"// Notice in the loop below that we go from 3 to cctk_lsh-3 for i, j, AND k, even though\n",
+    "    //   we are only computing the flux in one direction. This is because in the end,\n",
+    "    //   we only need the rhs's from 3 to cctk_lsh-3 for i, j, and k.\n",
+    "    const REAL invdxi[4] = {1e100,invdx0,invdx1,invdx2};\n",
+    "    const REAL invdx = invdxi[flux_dirn];\"\"\"\n",
+    "\n",
+    "    FD_body = \"\"\"const int index = IDX3S(i0,i1,i2);\n",
+    "const int indexp1 = IDX3S(i0+kronecker_delta[flux_dirn][0],i1+kronecker_delta[flux_dirn][1],i2+kronecker_delta[flux_dirn][2]);\n",
+    "\n",
+    "rhs_gfs[IDX4ptS(STILDED0GF,index)] += (auxevol_gfs[IDX4ptS(STILDE_FLUX_HLLED0GF,index)]     - auxevol_gfs[IDX4ptS(STILDE_FLUX_HLLED0GF,indexp1)]    ) * invdx;\n",
+    "rhs_gfs[IDX4ptS(STILDED1GF,index)] += (auxevol_gfs[IDX4ptS(STILDE_FLUX_HLLED1GF,index)]     - auxevol_gfs[IDX4ptS(STILDE_FLUX_HLLED1GF,indexp1)]    ) * invdx;\n",
+    "rhs_gfs[IDX4ptS(STILDED2GF,index)] += (auxevol_gfs[IDX4ptS(STILDE_FLUX_HLLED2GF,index)]     - auxevol_gfs[IDX4ptS(STILDE_FLUX_HLLED2GF,indexp1)]    ) * invdx;\"\"\"\n",
+    "\n",
+    "    desc = \"Compute the difference in the flux of StildeD on the opposite faces in flux_dirn for all components.\"\n",
+    "    name = \"calculate_Stilde_rhsD\"\n",
+    "    outCfunction(\n",
+    "        outfile  = os.path.join(out_dir,name+\".h\"), desc=desc, name=name,\n",
+    "        params   = \"const int flux_dirn,const paramstruct *params,const REAL *auxevol_gfs,REAL *rhs_gfs\",\n",
+    "        preloop  = pre_body,\n",
+    "        body     = FD_body,\n",
+    "        loopopts = \"InteriorPoints\",\n",
+    "        rel_path_for_Cparams=os.path.join(\"../\")\n",
+    "    )"
    ]
   },
   {
@@ -699,7 +674,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
