GiRaFFE_NRPy/Unit_Tests: Fixed several small issues in the unit tests.

--- a/in_progress/Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-A2B.ipynb
+++ b/in_progress/Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-A2B.ipynb
@@ -732,19 +732,19 @@
       "Now compiling, should take ~2 seconds...\n",
       "\n",
       "Compiling executable...\n",
-      "(EXEC): Executing `gcc -Ofast -fopenmp -march=native -funroll-loops Validation/A2B_unit_test.c -o Validation/A2B_unit_test.exe -lm`...\n",
-      "(BENCH): Finished executing in 1.6280932426452637 seconds.\n",
+      "(EXEC): Executing `gcc -Ofast -fopenmp -march=native -funroll-loops Validation/A2B_unit_test.c -o Validation/A2B_unit_test -lm`...\n",
+      "(BENCH): Finished executing in 0.609459638595581 seconds.\n",
       "Finished compilation.\n",
-      "Finished in 1.8241040706634521 seconds.\n",
+      "Finished in 0.6185991764068604 seconds.\n",
       "\n",
       "\n",
       "Now running...\n",
       "\n",
-      "(EXEC): Executing `cmd /c Validation\\A2B_unit_test 1 1 1 1`...\n",
-      "(BENCH): Finished executing in 0.24301385879516602 seconds.\n",
-      "(EXEC): Executing `cmd /c Validation\\A2B_unit_test 7 7 7 1`...\n",
-      "(BENCH): Finished executing in 0.24701428413391113 seconds.\n",
-      "Finished in 0.716041088104248 seconds.\n",
+      "(EXEC): Executing `taskset -c 0,1,2,3 ./Validation/A2B_unit_test 1 1 1 1`...\n",
+      "(BENCH): Finished executing in 0.2093517780303955 seconds.\n",
+      "(EXEC): Executing `taskset -c 0,1,2,3 ./Validation/A2B_unit_test 7 7 7 1`...\n",
+      "(BENCH): Finished executing in 0.20961666107177734 seconds.\n",
+      "Finished in 0.4334719181060791 seconds.\n",
       "\n",
       "\n"
      ]
@@ -801,20 +801,20 @@
      "output_type": "stream",
      "text": [
       "Face | Res  |  L2 norm  | Conv. Order\n",
-      " Int | Dx   | 0.0000003 | -- \n",
-      " --  | Dx/2 | 0.0000001 | 1.84998\n",
-      " -x  | Dx   | 0.0000006 | -- \n",
-      " --  | Dx/2 | 0.0000002 | 2.09450\n",
-      " +x  | Dx   | 0.0000006 | -- \n",
-      " --  | Dx/2 | 0.0000002 | 2.09450\n",
-      " -y  | Dx   | 0.0000010 | -- \n",
-      " --  | Dx/2 | 0.0000003 | 1.84995\n",
-      " +y  | Dx   | 0.0000010 | -- \n",
-      " --  | Dx/2 | 0.0000003 | 1.76225\n",
-      " -z  | Dx   | 0.0000006 | -- \n",
-      " --  | Dx/2 | 0.0000002 | 1.97686\n",
-      " +z  | Dx   | 0.0000009 | -- \n",
-      " --  | Dx/2 | 0.0000002 | 1.93391\n"
+      " Int | Dx   | 0.0000005 | -- \n",
+      " --  | Dx/2 | 0.0000001 | 1.90520\n",
+      " -x  | Dx   | 0.0000008 | -- \n",
+      " --  | Dx/2 | 0.0000002 | 2.08857\n",
+      " +x  | Dx   | 0.0000008 | -- \n",
+      " --  | Dx/2 | 0.0000002 | 2.08857\n",
+      " -y  | Dx   | 0.0000008 | -- \n",
+      " --  | Dx/2 | 0.0000002 | 1.64224\n",
+      " +y  | Dx   | 0.0000016 | -- \n",
+      " --  | Dx/2 | 0.0000004 | 1.87830\n",
+      " -z  | Dx   | 0.0000010 | -- \n",
+      " --  | Dx/2 | 0.0000002 | 2.09971\n",
+      " +z  | Dx   | 0.0000008 | -- \n",
+      " --  | Dx/2 | 0.0000002 | 1.99483\n"
      ]
     }
    ],
@@ -913,7 +913,7 @@
     "\n",
     "def conv_order(low,high):\n",
     "    order = np.log2(low/high)\n",
-    "    if order < 1.7:\n",
+    "    if order < 1.6:\n",
     "        sys.exit(1)\n",
     "    return order\n",
     "\n",
@@ -952,7 +952,17 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Created Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-A2B.tex, and\n",
+      "    compiled LaTeX file to PDF file Tutorial-Start_to_Finish_UnitTest-\n",
+      "    GiRaFFE_NRPy-A2B.pdf\n"
+     ]
+    }
+   ],
    "source": [
     "import cmdline_helper as cmd    # NRPy+: Multi-platform Python command-line interface\n",
     "cmd.output_Jupyter_notebook_to_LaTeXed_PDF(\"Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-A2B\",location_of_template_file=os.path.join(\"..\"))"
@@ -975,7 +985,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
