--- a/in_progress/Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-C2P_P2C.ipynb
+++ b/in_progress/Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-C2P_P2C.ipynb
@@ -645,11 +645,11 @@
      "text": [
       "Now compiling, should take ~2 seconds...\n",
       "\n",
-      "Finished in 1.8671064376831055 seconds.\n",
+      "Finished in 0.7271180152893066 seconds.\n",
       "\n",
       "\n",
-      "(EXEC): Executing `cmd /c C2P_P2C_unit_test.exe `...\n",
-      "(BENCH): Finished executing in 0.24601387977600098 seconds.\n"
+      "(EXEC): Executing `taskset -c 0,1,2,3 ./C2P_P2C_unit_test `...\n",
+      "(BENCH): Finished executing in 0.21047735214233398 seconds.\n"
      ]
     }
    ],
@@ -666,7 +666,7 @@
     "print(\"Finished in \"+str(end-start)+\" seconds.\\n\\n\")\n",
     "\n",
     "os.chdir(os.path.join(\"Validation\"))\n",
-    "cmd.Execute(os.path.join(\"C2P_P2C_unit_test.exe\"),file_to_redirect_stdout=os.path.join(results_file))\n",
+    "cmd.Execute(os.path.join(\"C2P_P2C_unit_test\"),file_to_redirect_stdout=os.path.join(results_file))\n",
     "os.chdir(os.path.join(\"..\"))"
    ]
   },
@@ -840,7 +840,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
