Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-Source_Terms: Fixed a bug introduced by a modification to the metric face value interpolation.

--- a/in_progress/Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-Source_Terms.ipynb
+++ b/in_progress/Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-Source_Terms.ipynb
@@ -511,9 +511,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Output C function calculate_StildeD0_source_term() to file Validation/source_terms\\calculate_StildeD0_source_term.h\n",
-      "Output C function calculate_StildeD1_source_term() to file Validation/source_terms\\calculate_StildeD1_source_term.h\n",
-      "Output C function calculate_StildeD2_source_term() to file Validation/source_terms\\calculate_StildeD2_source_term.h\n"
+      "Output C function calculate_StildeD0_source_term() to file Validation/source_terms/calculate_StildeD0_source_term.h\n",
+      "Output C function calculate_StildeD1_source_term() to file Validation/source_terms/calculate_StildeD1_source_term.h\n",
+      "Output C function calculate_StildeD2_source_term() to file Validation/source_terms/calculate_StildeD2_source_term.h\n"
      ]
     }
    ],
@@ -551,7 +551,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Output C function calculate_AD_gauge_term_psi6Phi_flux_term_for_RHSs() to file Validation/source_terms\\calculate_AD_gauge_term_psi6Phi_flux_term_for_RHSs.h\n"
+      "Output C function calculate_AD_gauge_term_psi6Phi_flux_term_for_RHSs() to file Validation/source_terms/calculate_AD_gauge_term_psi6Phi_flux_term_for_RHSs.h\n"
      ]
     }
    ],
@@ -597,7 +597,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Output C function calculate_AD_gauge_psi6Phi_RHSs() to file Validation/source_terms\\calculate_AD_gauge_psi6Phi_RHSs.h\n"
+      "Output C function calculate_AD_gauge_psi6Phi_RHSs() to file Validation/source_terms/calculate_AD_gauge_psi6Phi_RHSs.h\n"
      ]
     }
    ],
@@ -786,7 +786,19 @@
     "#define PHIEVOLPARENU0GF 27\n",
     "#define PHIEVOLPARENU1GF 28\n",
     "#define PHIEVOLPARENU2GF 29\n",
-    "#define NUM_AUXEVOL_GFS 30\n",
+    "#define GAMMAUU00GF 30\n",
+    "#define GAMMAUU01GF 31\n",
+    "#define GAMMAUU02GF 32\n",
+    "#define GAMMAUU11GF 33\n",
+    "#define GAMMAUU12GF 34\n",
+    "#define GAMMAUU22GF 35\n",
+    "#define GAMMA_FACEUU00GF 36\n",
+    "#define GAMMA_FACEUU01GF 37\n",
+    "#define GAMMA_FACEUU02GF 38\n",
+    "#define GAMMA_FACEUU11GF 39\n",
+    "#define GAMMA_FACEUU12GF 40\n",
+    "#define GAMMA_FACEUU22GF 41\n",
+    "#define NUM_AUXEVOL_GFS 42\n",
     "\n",
     "#define AD0GF 0\n",
     "#define AD1GF 1\n",
@@ -923,19 +935,19 @@
       "Now compiling, should take ~2 seconds...\n",
       "\n",
       "Compiling executable...\n",
-      "(EXEC): Executing `gcc -Ofast -fopenmp -march=native -funroll-loops Validation/Stilde_source_A_gauge_Phi_rhs_unit_test.c -o Validation/Stilde_source_A_gauge_Phi_rhs_unit_test.exe -lm`...\n",
-      "(BENCH): Finished executing in 75.0001049041748 seconds.\n",
+      "(EXEC): Executing `gcc -Ofast -fopenmp -march=native -funroll-loops Validation/Stilde_source_A_gauge_Phi_rhs_unit_test.c -o Validation/Stilde_source_A_gauge_Phi_rhs_unit_test -lm`...\n",
+      "(BENCH): Finished executing in 1.2124035358428955 seconds.\n",
       "Finished compilation.\n",
-      "Finished in 75.54010558128357 seconds.\n",
+      "Finished in 1.2215564250946045 seconds.\n",
       "\n",
       "\n",
       "Now running...\n",
       "\n",
-      "(EXEC): Executing `cmd /c Validation\\Stilde_source_A_gauge_Phi_rhs_unit_test 2 2 2`...\n",
-      "(BENCH): Finished executing in 0.6800007820129395 seconds.\n",
-      "(EXEC): Executing `cmd /c Validation\\Stilde_source_A_gauge_Phi_rhs_unit_test 4 4 4`...\n",
-      "(BENCH): Finished executing in 0.24000024795532227 seconds.\n",
-      "Finished in 1.1400017738342285 seconds.\n",
+      "(EXEC): Executing `taskset -c 0,1,2,3 ./Validation/Stilde_source_A_gauge_Phi_rhs_unit_test 2 2 2`...\n",
+      "(BENCH): Finished executing in 0.20995259284973145 seconds.\n",
+      "(EXEC): Executing `taskset -c 0,1,2,3 ./Validation/Stilde_source_A_gauge_Phi_rhs_unit_test 4 4 4`...\n",
+      "(BENCH): Finished executing in 0.2112410068511963 seconds.\n",
+      "Finished in 0.43733739852905273 seconds.\n",
       "\n",
       "\n"
      ]
@@ -980,13 +992,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "PASS: Stilde_rhsD0 has convergence order of 2.0283969804790263\n",
-      "PASS: Stilde_rhsD1 has convergence order of 1.9552339585393523\n",
-      "PASS: Stilde_rhsD2 has convergence order of 1.9438809175383802\n",
-      "PASS: A_rhsD0 has convergence order of 2.723387388030936\n",
-      "PASS: A_rhsD1 has convergence order of 2.450318718360834\n",
-      "PASS: A_rhsD2 has convergence order of 2.006383110580485\n",
-      "PASS: psi6Phi_rhs has convergence order of 2.05357137129402\n"
+      "PASS: Stilde_rhsD0 has convergence order of 2.0331691730607853\n",
+      "PASS: Stilde_rhsD1 has convergence order of 2.19343762296608\n",
+      "PASS: Stilde_rhsD2 has convergence order of 2.1412625521533175\n",
+      "PASS: A_rhsD0 has convergence order of 1.9883658746322042\n",
+      "PASS: A_rhsD1 has convergence order of 1.9937273134938553\n",
+      "PASS: A_rhsD2 has convergence order of 2.0022838026313523\n",
+      "PASS: psi6Phi_rhs has convergence order of 1.9752724953843148\n"
      ]
     }
    ],
@@ -1035,7 +1047,17 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Created Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-Source_Terms.tex,\n",
+      "    and compiled LaTeX file to PDF file Tutorial-Start_to_Finish_UnitTest-\n",
+      "    GiRaFFE_NRPy-Source_Terms.pdf\n"
+     ]
+    }
+   ],
    "source": [
     "import cmdline_helper as cmd    # NRPy+: Multi-platform Python command-line interface\n",
     "cmd.output_Jupyter_notebook_to_LaTeXed_PDF(\"Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-Source_Terms\",location_of_template_file=os.path.join(\"..\"))"
@@ -1058,7 +1080,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
