Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-Source_Terms: Disable CSE_sorting to speed up the notebook.

--- a/in_progress/Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-Source_Terms.ipynb
+++ b/in_progress/Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-Source_Terms.ipynb
@@ -259,17 +259,17 @@
     }
    ],
    "source": [
-    "metric_gfs_to_print = [\\\n",
-    "                       lhrh(lhs=gri.gfaccess(\"auxevol_gfs\",\"gammaDD00\"),rhs=gammaDD[0][0]),\\\n",
-    "                       lhrh(lhs=gri.gfaccess(\"auxevol_gfs\",\"gammaDD01\"),rhs=gammaDD[0][1]),\\\n",
-    "                       lhrh(lhs=gri.gfaccess(\"auxevol_gfs\",\"gammaDD02\"),rhs=gammaDD[0][2]),\\\n",
-    "                       lhrh(lhs=gri.gfaccess(\"auxevol_gfs\",\"gammaDD11\"),rhs=gammaDD[1][1]),\\\n",
-    "                       lhrh(lhs=gri.gfaccess(\"auxevol_gfs\",\"gammaDD12\"),rhs=gammaDD[1][2]),\\\n",
-    "                       lhrh(lhs=gri.gfaccess(\"auxevol_gfs\",\"gammaDD22\"),rhs=gammaDD[2][2]),\\\n",
-    "                       lhrh(lhs=gri.gfaccess(\"auxevol_gfs\",\"betaU0\"),rhs=betaU[0]),\\\n",
-    "                       lhrh(lhs=gri.gfaccess(\"auxevol_gfs\",\"betaU1\"),rhs=betaU[1]),\\\n",
-    "                       lhrh(lhs=gri.gfaccess(\"auxevol_gfs\",\"betaU2\"),rhs=betaU[2]),\\\n",
-    "                       lhrh(lhs=gri.gfaccess(\"auxevol_gfs\",\"alpha\"),rhs=alpha),\\\n",
+    "metric_gfs_to_print = [\n",
+    "                       lhrh(lhs=gri.gfaccess(\"auxevol_gfs\",\"gammaDD00\"),rhs=gammaDD[0][0]),\n",
+    "                       lhrh(lhs=gri.gfaccess(\"auxevol_gfs\",\"gammaDD01\"),rhs=gammaDD[0][1]),\n",
+    "                       lhrh(lhs=gri.gfaccess(\"auxevol_gfs\",\"gammaDD02\"),rhs=gammaDD[0][2]),\n",
+    "                       lhrh(lhs=gri.gfaccess(\"auxevol_gfs\",\"gammaDD11\"),rhs=gammaDD[1][1]),\n",
+    "                       lhrh(lhs=gri.gfaccess(\"auxevol_gfs\",\"gammaDD12\"),rhs=gammaDD[1][2]),\n",
+    "                       lhrh(lhs=gri.gfaccess(\"auxevol_gfs\",\"gammaDD22\"),rhs=gammaDD[2][2]),\n",
+    "                       lhrh(lhs=gri.gfaccess(\"auxevol_gfs\",\"betaU0\"),rhs=betaU[0]),\n",
+    "                       lhrh(lhs=gri.gfaccess(\"auxevol_gfs\",\"betaU1\"),rhs=betaU[1]),\n",
+    "                       lhrh(lhs=gri.gfaccess(\"auxevol_gfs\",\"betaU2\"),rhs=betaU[2]),\n",
+    "                       lhrh(lhs=gri.gfaccess(\"auxevol_gfs\",\"alpha\"),rhs=alpha),\n",
     "                      ]\n",
     "desc = \"Calculate the metric gridfunctions\"\n",
     "name = \"calculate_metric_gfs\"\n",
@@ -279,14 +279,14 @@
     "    body     = fin.FD_outputC(\"returnstring\",metric_gfs_to_print,params=\"outCverbose=False\").replace(\"IDX4\",\"IDX4S\"),\n",
     "    loopopts =\"AllPoints,Read_xxs\")\n",
     "\n",
-    "EM_to_print = [\\\n",
-    "               lhrh(lhs=gri.gfaccess(\"auxevol_gfs\",\"BU0\"),rhs=BU[0]),\\\n",
-    "               lhrh(lhs=gri.gfaccess(\"auxevol_gfs\",\"BU1\"),rhs=BU[1]),\\\n",
-    "               lhrh(lhs=gri.gfaccess(\"auxevol_gfs\",\"BU2\"),rhs=BU[2]),\\\n",
-    "               lhrh(lhs=gri.gfaccess(\"out_gfs\",\"AD0\"),rhs=AD[0]),\\\n",
-    "               lhrh(lhs=gri.gfaccess(\"out_gfs\",\"AD1\"),rhs=AD[1]),\\\n",
-    "               lhrh(lhs=gri.gfaccess(\"out_gfs\",\"AD2\"),rhs=AD[2]),\\\n",
-    "               lhrh(lhs=gri.gfaccess(\"out_gfs\",\"psi6Phi\"),rhs=psi6Phi),\\\n",
+    "EM_to_print = [\n",
+    "               lhrh(lhs=gri.gfaccess(\"auxevol_gfs\",\"BU0\"),rhs=BU[0]),\n",
+    "               lhrh(lhs=gri.gfaccess(\"auxevol_gfs\",\"BU1\"),rhs=BU[1]),\n",
+    "               lhrh(lhs=gri.gfaccess(\"auxevol_gfs\",\"BU2\"),rhs=BU[2]),\n",
+    "               lhrh(lhs=gri.gfaccess(\"out_gfs\",\"AD0\"),rhs=AD[0]),\n",
+    "               lhrh(lhs=gri.gfaccess(\"out_gfs\",\"AD1\"),rhs=AD[1]),\n",
+    "               lhrh(lhs=gri.gfaccess(\"out_gfs\",\"AD2\"),rhs=AD[2]),\n",
+    "               lhrh(lhs=gri.gfaccess(\"out_gfs\",\"psi6Phi\"),rhs=psi6Phi),\n",
     "              ]\n",
     "\n",
     "desc = \"Calculate sample magnetic field and potential data\"\n",
@@ -294,13 +294,13 @@
     "outCfunction(\n",
     "    outfile  = os.path.join(out_dir,name+\".h\"), desc=desc, name=name,\n",
     "    params   =\"const paramstruct *params,REAL *xx[3],REAL *auxevol_gfs,REAL *out_gfs\",\n",
-    "    body     = fin.FD_outputC(\"returnstring\",EM_to_print,params=\"outCverbose=False\").replace(\"IDX4\",\"IDX4S\"),\n",
+    "    body     = fin.FD_outputC(\"returnstring\",EM_to_print,params=\"outCverbose=False,CSE_sorting=none\").replace(\"IDX4\",\"IDX4S\"),\n",
     "    loopopts =\"AllPoints,Read_xxs\")\n",
     "\n",
-    "ValenciavU_to_print = [\\\n",
-    "                       lhrh(lhs=gri.gfaccess(\"auxevol_gfs\",\"ValenciavU0\"),rhs=ValenciavU[0]),\\\n",
-    "                       lhrh(lhs=gri.gfaccess(\"auxevol_gfs\",\"ValenciavU1\"),rhs=ValenciavU[1]),\\\n",
-    "                       lhrh(lhs=gri.gfaccess(\"auxevol_gfs\",\"ValenciavU2\"),rhs=ValenciavU[2]),\\\n",
+    "ValenciavU_to_print = [\n",
+    "                       lhrh(lhs=gri.gfaccess(\"auxevol_gfs\",\"ValenciavU0\"),rhs=ValenciavU[0]),\n",
+    "                       lhrh(lhs=gri.gfaccess(\"auxevol_gfs\",\"ValenciavU1\"),rhs=ValenciavU[1]),\n",
+    "                       lhrh(lhs=gri.gfaccess(\"auxevol_gfs\",\"ValenciavU2\"),rhs=ValenciavU[2]),\n",
     "                      ]\n",
     "\n",
     "desc = \"Calculate sample velocity data\"\n",
@@ -469,14 +469,14 @@
    "source": [
     "StildeD = ixp.register_gridfunctions_for_single_rank1(\"EVOL\",\"StildeD\")\n",
     "\n",
-    "RHSs_to_print = [\\\n",
-    "                 lhrh(lhs=gri.gfaccess(\"rhs_gfs\",\"StildeD0\"),rhs=Stilde_rhsD[0]),\\\n",
-    "                 lhrh(lhs=gri.gfaccess(\"rhs_gfs\",\"StildeD1\"),rhs=Stilde_rhsD[1]),\\\n",
-    "                 lhrh(lhs=gri.gfaccess(\"rhs_gfs\",\"StildeD2\"),rhs=Stilde_rhsD[2]),\\\n",
-    "                 lhrh(lhs=gri.gfaccess(\"rhs_gfs\",\"AD0\"),rhs=A_rhsD[0]),\\\n",
-    "                 lhrh(lhs=gri.gfaccess(\"rhs_gfs\",\"AD1\"),rhs=A_rhsD[1]),\\\n",
-    "                 lhrh(lhs=gri.gfaccess(\"rhs_gfs\",\"AD2\"),rhs=A_rhsD[2]),\\\n",
-    "                 lhrh(lhs=gri.gfaccess(\"rhs_gfs\",\"psi6Phi\"),rhs=psi6Phi_rhs),\\\n",
+    "RHSs_to_print = [\n",
+    "                 lhrh(lhs=gri.gfaccess(\"rhs_gfs\",\"StildeD0\"),rhs=Stilde_rhsD[0]),\n",
+    "                 lhrh(lhs=gri.gfaccess(\"rhs_gfs\",\"StildeD1\"),rhs=Stilde_rhsD[1]),\n",
+    "                 lhrh(lhs=gri.gfaccess(\"rhs_gfs\",\"StildeD2\"),rhs=Stilde_rhsD[2]),\n",
+    "                 lhrh(lhs=gri.gfaccess(\"rhs_gfs\",\"AD0\"),rhs=A_rhsD[0]),\n",
+    "                 lhrh(lhs=gri.gfaccess(\"rhs_gfs\",\"AD1\"),rhs=A_rhsD[1]),\n",
+    "                 lhrh(lhs=gri.gfaccess(\"rhs_gfs\",\"AD2\"),rhs=A_rhsD[2]),\n",
+    "                 lhrh(lhs=gri.gfaccess(\"rhs_gfs\",\"psi6Phi\"),rhs=psi6Phi_rhs),\n",
     "                ]\n",
     "\n",
     "desc = \"Calculate analytic RHSs for comparison\"\n",
@@ -484,7 +484,7 @@
     "outCfunction(\n",
     "    outfile  = os.path.join(out_dir,name+\".h\"), desc=desc, name=name,\n",
     "    params   =\"const paramstruct *params,REAL *xx[3],REAL *rhs_gfs\",\n",
-    "    body     = fin.FD_outputC(\"returnstring\",RHSs_to_print,params=\"outCverbose=False\").replace(\"IDX4\",\"IDX4S\"),\n",
+    "    body     = fin.FD_outputC(\"returnstring\",RHSs_to_print,params=\"outCverbose=False,CSE_sorting=none\").replace(\"IDX4\",\"IDX4S\"),\n",
     "    loopopts =\"AllPoints,Read_xxs\")\n"
    ]
   },
@@ -936,18 +936,18 @@
       "\n",
       "Compiling executable...\n",
       "(EXEC): Executing `gcc -Ofast -fopenmp -march=native -funroll-loops Validation/Stilde_source_A_gauge_Phi_rhs_unit_test.c -o Validation/Stilde_source_A_gauge_Phi_rhs_unit_test -lm`...\n",
-      "(BENCH): Finished executing in 1.2124035358428955 seconds.\n",
+      "(BENCH): Finished executing in 1.2116084098815918 seconds.\n",
       "Finished compilation.\n",
-      "Finished in 1.2215564250946045 seconds.\n",
+      "Finished in 1.2187669277191162 seconds.\n",
       "\n",
       "\n",
       "Now running...\n",
       "\n",
       "(EXEC): Executing `taskset -c 0,1,2,3 ./Validation/Stilde_source_A_gauge_Phi_rhs_unit_test 2 2 2`...\n",
-      "(BENCH): Finished executing in 0.20995259284973145 seconds.\n",
+      "(BENCH): Finished executing in 0.21054625511169434 seconds.\n",
       "(EXEC): Executing `taskset -c 0,1,2,3 ./Validation/Stilde_source_A_gauge_Phi_rhs_unit_test 4 4 4`...\n",
-      "(BENCH): Finished executing in 0.2112410068511963 seconds.\n",
-      "Finished in 0.43733739852905273 seconds.\n",
+      "(BENCH): Finished executing in 0.20999717712402344 seconds.\n",
+      "Finished in 0.4371979236602783 seconds.\n",
       "\n",
       "\n"
      ]
@@ -996,8 +996,8 @@
       "PASS: Stilde_rhsD1 has convergence order of 2.19343762296608\n",
       "PASS: Stilde_rhsD2 has convergence order of 2.1412625521533175\n",
       "PASS: A_rhsD0 has convergence order of 1.9883658746322042\n",
-      "PASS: A_rhsD1 has convergence order of 1.9937273134938553\n",
-      "PASS: A_rhsD2 has convergence order of 2.0022838026313523\n",
+      "PASS: A_rhsD1 has convergence order of 1.993727313495029\n",
+      "PASS: A_rhsD2 has convergence order of 2.002283802631376\n",
       "PASS: psi6Phi_rhs has convergence order of 1.9752724953843148\n"
      ]
     }
