in_progress/Tutorial-Start_to_Finish_UnitTest-*.ipynb: Re-establish python2 support -- whitespace fixes; no functional changes

--- a/in_progress/Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-C2P_P2C.ipynb
+++ b/in_progress/Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-C2P_P2C.ipynb
@@ -370,7 +370,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting Validation//C2P_P2C_unit_test.C\n"
+      "Writing Validation//C2P_P2C_unit_test.C\n"
      ]
     }
    ],
@@ -645,11 +645,11 @@
      "text": [
       "Now compiling, should take ~2 seconds...\n",
       "\n",
-      "Finished in 0.7271180152893066 seconds.\n",
+      "Finished in 0.479337930679 seconds.\n",
       "\n",
       "\n",
-      "(EXEC): Executing `taskset -c 0,1,2,3 ./C2P_P2C_unit_test `...\n",
-      "(BENCH): Finished executing in 0.21047735214233398 seconds.\n"
+      "(EXEC): Executing `taskset -c 0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15 ./C2P_P2C_unit_test `...\n",
+      "(BENCH): Finished executing in 0.210115909576 seconds.\n"
      ]
     }
    ],
@@ -826,21 +826,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.17"
   }
  },
  "nbformat": 4,
