--- a/in_progress/Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-BCs.ipynb
+++ b/in_progress/Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-BCs.ipynb
@@ -284,6 +284,7 @@
    ],
    "source": [
     "%%writefile $out_dir/BCs_unit_test.c\n",
+    "\n",
     "// These are common packages that we are likely to need.\n",
     "#include \"stdio.h\"\n",
     "#include \"stdlib.h\"\n",
@@ -463,17 +464,17 @@
       "Now compiling, should take ~2 seconds...\n",
       "\n",
       "Compiling executable...\n",
-      "(EXEC): Executing `gcc -Ofast -fopenmp -march=native -funroll-loops Validation/BCs_unit_test.c -o Validation/BCs_unit_test.exe -lm`...\n",
-      "(BENCH): Finished executing in 1.8401052951812744 seconds.\n",
+      "(EXEC): Executing `gcc -Ofast -fopenmp -march=native -funroll-loops Validation/BCs_unit_test.c -o Validation/BCs_unit_test -lm`...\n",
+      "(BENCH): Finished executing in 0.408955097198 seconds.\n",
       "Finished compilation.\n",
-      "Finished in 2.0171151161193848 seconds.\n",
+      "Finished in 0.418621063232 seconds.\n",
       "\n",
       "\n",
       "Now running...\n",
       "\n",
-      "(EXEC): Executing `cmd /c Validation\\BCs_unit_test 2 2 2`...\n",
-      "(BENCH): Finished executing in 0.23801374435424805 seconds.\n",
-      "Finished in 0.35502028465270996 seconds.\n",
+      "(EXEC): Executing `taskset -c 0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15 ./Validation/BCs_unit_test 2 2 2`...\n",
+      "(BENCH): Finished executing in 0.207891941071 seconds.\n",
+      "Finished in 0.219959020615 seconds.\n",
       "\n",
       "\n"
      ]
@@ -545,7 +546,17 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Created Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-BCs.tex, and\n",
+      "    compiled LaTeX file to PDF file Tutorial-Start_to_Finish_UnitTest-\n",
+      "    GiRaFFE_NRPy-BCs.pdf\n"
+     ]
+    }
+   ],
    "source": [
     "import cmdline_helper as cmd    # NRPy+: Multi-platform Python command-line interface\n",
     "cmd.output_Jupyter_notebook_to_LaTeXed_PDF(\"Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-BCs\",location_of_template_file=os.path.join(\"..\"))"
@@ -554,21 +565,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.17"
   }
  },
  "nbformat": 4,
