--- a/in_progress/Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-PPM.ipynb
+++ b/in_progress/Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-PPM.ipynb
@@ -380,7 +380,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting Validation//PPM_unit_test.C\n"
+      "Writing Validation//PPM_unit_test.C\n"
      ]
     }
    ],
@@ -821,17 +821,17 @@
       "Now compiling, should take ~2 seconds...\n",
       "\n",
       "Compiling executable...\n",
-      "(EXEC): Executing `gcc -Ofast -fopenmp -march=native -funroll-loops Validation/PPM_unit_test.C -o Validation/PPM_unit_test.exe -lm`...\n",
-      "(BENCH): Finished executing in 1.6260080337524414 seconds.\n",
+      "(EXEC): Executing `gcc -Ofast -fopenmp -march=native -funroll-loops Validation/PPM_unit_test.C -o Validation/PPM_unit_test -lm`...\n",
+      "(BENCH): Finished executing in 0.408974170685 seconds.\n",
       "Finished compilation.\n",
-      "Finished in 1.7760083675384521 seconds.\n",
+      "Finished in 0.418359994888 seconds.\n",
       "\n",
       "\n",
       "Now running...\n",
       "\n",
-      "(EXEC): Executing `cmd /c Validation\\PPM_unit_test `...\n",
-      "(BENCH): Finished executing in 0.23000049591064453 seconds.\n",
-      "Finished in 0.34000062942504883 seconds.\n",
+      "(EXEC): Executing `taskset -c 0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15 ./Validation/PPM_unit_test `...\n",
+      "(BENCH): Finished executing in 0.20675611496 seconds.\n",
+      "Finished in 0.21869301796 seconds.\n",
       "\n",
       "\n"
      ]
@@ -912,7 +912,17 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Created Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-PPM.tex, and\n",
+      "    compiled LaTeX file to PDF file Tutorial-Start_to_Finish_UnitTest-\n",
+      "    GiRaFFE_NRPy-PPM.pdf\n"
+     ]
+    }
+   ],
    "source": [
     "import cmdline_helper as cmd    # NRPy+: Multi-platform Python command-line interface\n",
     "cmd.output_Jupyter_notebook_to_LaTeXed_PDF(\"Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-PPM\",location_of_template_file=os.path.join(\"..\"))"
@@ -921,21 +931,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.17"
   }
  },
  "nbformat": 4,
