--- a/in_progress/Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-Source_Terms.ipynb
+++ b/in_progress/Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-Source_Terms.ipynb
@@ -725,7 +725,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting Validation//Stilde_source_A_gauge_Phi_rhs_unit_test.c\n"
+      "Writing Validation//Stilde_source_A_gauge_Phi_rhs_unit_test.c\n"
      ]
     }
    ],
@@ -936,18 +936,18 @@
       "\n",
       "Compiling executable...\n",
       "(EXEC): Executing `gcc -Ofast -fopenmp -march=native -funroll-loops Validation/Stilde_source_A_gauge_Phi_rhs_unit_test.c -o Validation/Stilde_source_A_gauge_Phi_rhs_unit_test -lm`...\n",
-      "(BENCH): Finished executing in 1.214254379272461 seconds.\n",
+      "(BENCH): Finished executing in 0.810406923294 seconds.\n",
       "Finished compilation.\n",
-      "Finished in 1.2234399318695068 seconds.\n",
+      "Finished in 0.820358991623 seconds.\n",
       "\n",
       "\n",
       "Now running...\n",
       "\n",
-      "(EXEC): Executing `taskset -c 0,1,2,3 ./Validation/Stilde_source_A_gauge_Phi_rhs_unit_test 2 2 2`...\n",
-      "(BENCH): Finished executing in 0.20971059799194336 seconds.\n",
-      "(EXEC): Executing `taskset -c 0,1,2,3 ./Validation/Stilde_source_A_gauge_Phi_rhs_unit_test 4 4 4`...\n",
-      "(BENCH): Finished executing in 0.2096843719482422 seconds.\n",
-      "Finished in 0.43448925018310547 seconds.\n",
+      "(EXEC): Executing `taskset -c 0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15 ./Validation/Stilde_source_A_gauge_Phi_rhs_unit_test 2 2 2`...\n",
+      "(BENCH): Finished executing in 0.208612918854 seconds.\n",
+      "(EXEC): Executing `taskset -c 0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15 ./Validation/Stilde_source_A_gauge_Phi_rhs_unit_test 4 4 4`...\n",
+      "(BENCH): Finished executing in 0.207757949829 seconds.\n",
+      "Finished in 0.430425882339 seconds.\n",
       "\n",
       "\n"
      ]
@@ -992,13 +992,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "PASS: Stilde_rhsD0 has convergence order of 2.0331691730607853\n",
-      "PASS: Stilde_rhsD1 has convergence order of 2.19343762296608\n",
-      "PASS: Stilde_rhsD2 has convergence order of 2.1412625521533175\n",
-      "PASS: A_rhsD0 has convergence order of 1.9883658746322042\n",
-      "PASS: A_rhsD1 has convergence order of 1.993727313495029\n",
+      "PASS: Stilde_rhsD0 has convergence order of 2.033169173028596\n",
+      "PASS: Stilde_rhsD1 has convergence order of 2.1934376227929473\n",
+      "PASS: Stilde_rhsD2 has convergence order of 2.141262552455326\n",
+      "PASS: A_rhsD0 has convergence order of 1.9883658746309683\n",
+      "PASS: A_rhsD1 has convergence order of 1.9937273134938553\n",
       "PASS: A_rhsD2 has convergence order of 2.002283802631376\n",
-      "PASS: psi6Phi_rhs has convergence order of 1.9752724953842962\n"
+      "PASS: psi6Phi_rhs has convergence order of 1.9752724953845153\n"
      ]
     }
    ],
@@ -1066,21 +1066,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.17"
   }
  },
  "nbformat": 4,
