--- a/in_progress/Tutorial-Start_to_Finish_UnitTest-GiRaFFEfood_NRPy.ipynb
+++ b/in_progress/Tutorial-Start_to_Finish_UnitTest-GiRaFFEfood_NRPy.ipynb
@@ -450,12 +450,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing Validation//GiRaFFEfood_NRPy_unit_test.C\n"
+      "Overwriting Validation//GiRaFFEfood_NRPy_unit_test.C\n"
      ]
     }
    ],
    "source": [
     "%%writefile $out_dir/GiRaFFEfood_NRPy_unit_test.C\n",
+    "\n",
     "// These are common packages that we are likely to need.\n",
     "#include \"stdio.h\"\n",
     "#include \"stdlib.h\"\n",
@@ -775,11 +776,11 @@
      "text": [
       "Now compiling, should take ~2 seconds...\n",
       "\n",
-      "Finished in 3.9062232971191406 seconds.\n",
+      "Finished in 0.873970985413 seconds.\n",
       "\n",
       "\n",
-      "(EXEC): Executing `cmd /c GiRaFFEfood_NRPy_unit_test 2`...\n",
-      "(BENCH): Finished executing in 0.48802781105041504 seconds.\n"
+      "(EXEC): Executing `taskset -c 0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15 ./GiRaFFEfood_NRPy_unit_test 2`...\n",
+      "(BENCH): Finished executing in 0.210108041763 seconds.\n"
      ]
     }
    ],
@@ -866,9 +867,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "pdflatex: security risk: running with elevated privileges\n",
-      "pdflatex: security risk: running with elevated privileges\n",
-      "pdflatex: security risk: running with elevated privileges\n",
       "Created Tutorial-Start_to_Finish_UnitTest-GiRaFFEfood_NRPy.tex, and\n",
       "    compiled LaTeX file to PDF file Tutorial-Start_to_Finish_UnitTest-\n",
       "    GiRaFFEfood_NRPy.pdf\n"
@@ -883,21 +881,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.17"
   }
  },
  "nbformat": 4,
