--- a/in_progress/Tutorial-Start_to_Finish_UnitTest-ShiftedKerrSchild.ipynb
+++ b/in_progress/Tutorial-Start_to_Finish_UnitTest-ShiftedKerrSchild.ipynb
@@ -334,7 +334,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting Validation//ShiftedKerrSchild_unit_test.C\n"
+      "Writing Validation//ShiftedKerrSchild_unit_test.C\n"
      ]
     }
    ],
@@ -564,11 +564,11 @@
      "text": [
       "Now compiling, should take ~2 seconds...\n",
       "\n",
-      "Finished in 6.884393692016602 seconds.\n",
+      "Finished in 0.321566820145 seconds.\n",
       "\n",
       "\n",
-      "(EXEC): Executing `cmd /c ShiftedKerrSchild_unit_test `...\n",
-      "(BENCH): Finished executing in 0.24601411819458008 seconds.\n"
+      "(EXEC): Executing `taskset -c 0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15 ./ShiftedKerrSchild_unit_test `...\n",
+      "(BENCH): Finished executing in 0.205908060074 seconds.\n"
      ]
     }
    ],
@@ -642,9 +642,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "pdflatex: security risk: running with elevated privileges\n",
-      "pdflatex: security risk: running with elevated privileges\n",
-      "pdflatex: security risk: running with elevated privileges\n",
       "Created Tutorial-Start_to_Finish_UnitTest-GiRaFFEfood_NRPy.tex, and\n",
       "    compiled LaTeX file to PDF file Tutorial-Start_to_Finish_UnitTest-\n",
       "    GiRaFFEfood_NRPy.pdf\n"
@@ -659,21 +656,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.17"
   }
  },
  "nbformat": 4,
